# fast-step-graph

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: sample.py
src/fast_step_graph/: __init__.py  _fast_step_graph.py  base.py  cv.py
tests/: generate_iris_fixtures.R  generate_test_data.R
tests/fixtures/data/: X.csv  beta.csv  edges.csv  iris_beta.csv  iris_edges.csv  iris_omega.csv  omega.csv
tests/unit/: test__fast_step_graph.py  test_against_r.py  test_base.py  test_cv.py  test_fast_step_graph.py
